--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <footer>
+        <p>&copy; 2025 My Website</p>
+    </footer>
 </body>
 </html>
