Added hero section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <section class="hero">
+       <h2>Start your learning path here</h2>
+       <div>
+        <img src="/Users/eswar/Downloads/7-Hero-4K.png "\>
+        <p>
+            "The beautiful thing about learning is nobody can take it away from you."
+        </p>
+       </div>
+    </section>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
