--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             <input type="submit" value="Submit">
         </form>
     </section>
+    <div class="testimonial">
+        <span>
+            <p>Leo Buscaglia</p>
+            <p>"Change is the end result of all true learning"</p>
+            <p>Julius Caesar </p>
+            <p>"Experience is the teacher of all things"</p>
+        </span>
+    </div>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
