Added placeholder in testimonial section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
             <input type="submit" value="Submit">
         </form>
     </section>
-    <div class="testimonial">
+    <section>
         <span>
             <p>Leo Buscaglia</p>
             <p>"Change is the end result of all true learning"</p>
             <p>Julius Caesar </p>
             <p>"Experience is the teacher of all things"</p>
+            <input type="text" placeholder="Enter your favorite quote here..." size="30">
         </span>
-    </div>
+    </section>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
